# mycelium

./: .gitignore  LICENSE  README.md  SECURITY.md
docs/: book.toml
docs/src/: Introduction.md
operator/: .gitignore  Cargo.toml  Dockerfile  operator.Dockerfile  runner.Dockerfile  rustfmt.toml
operator/chart/: Chart.yaml  values.yaml
operator/chart/templates/: crds.yaml  operator-acl.yaml  operator-secret.yaml  operator-service.yaml  operator-statefulset.yaml
operator/defaults/: paper.yml  prometheus.yaml  velocity.toml
operator/src/: crdgen.rs  lib.rs  main.rs  runner.rs
operator/src/helpers/: jarapi.rs  manager.rs  metrics.rs  mod.rs  state.rs  telemetry.rs
operator/src/objects/: minecraft_proxy.rs  minecraft_set.rs  mod.rs
operator/src/runnable/: minecraft.rs  mod.rs  paper.rs
plugin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
plugin/common/: build.gradle.kts
plugin/common/src/main/kotlin/: Monitoring.kt
plugin/paper/: build.gradle.kts
plugin/paper/src/main/kotlin/: Plugin.kt
plugin/paper/src/main/resources/: plugin.yml
plugin/velocity/: build.gradle.kts  gradle.properties
plugin/velocity/src/main/kotlin/dev/njha/mycelium/plugin/velocity/: Plugin.kt
plugin/velocity/src/main/kotlin/dev/njha/mycelium/plugin/velocity/metrics/: MetricsCollection.kt  MetricsCollector.kt
plugin/velocity/src/main/kotlin/dev/njha/mycelium/plugin/velocity/models/: Server.kt
runner/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
runner/defaults/: server.properties
runner/src/: main.rs
src/: crdgen.rs  lib.rs  telemetry.rs
velocity/: .gitignore  build.gradle.kts  settings.gradle.kts
velocity/src/main/kotlin/dev/njha/mycelium/velocity/: Plugin.kt
velocity/src/main/kotlin/dev/njha/mycelium/velocity/models/: Server.kt
