[package]
name = "mycelium"
version = "0.1.0"
authors = ["Nikhil Jha <mail@nikhiljha.com>"]
edition = "2018"
default-run = "mycelium-operator"

[[bin]]
doc = false
name = "mycelium-operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "mycelium-crdgen"
path = "src/crdgen.rs"

[lib]
name = "mycelium"
path = "src/lib.rs"

[features]
default = []
telemetry = []

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.1"
futures = "0.3.15"
tokio = { version = "1.6.0", features = ["macros"] }
kube = { version = "0.57.0", features = ["derive"] }
kube-runtime = "0.57.0"
k8s-openapi = { version = "0.12.0", features = ["v1_20"], default-features=false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"
schemars = { version = "0.8.3", features = ["chrono"] }
serde_yaml = "0.8.17"
maplit = "1.0.2"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["json"] }
tracing-opentelemetry = "0.12.0"
opentelemetry = { version = "0.13.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.6.0", features = ["tokio"] }
prometheus = "0.12.0"

