[package]
name = "mycelium"
version = "0.4.0"
authors = ["Nikhil Jha <source@nikhiljha.com>"]
edition = "2021"
default-run = "mycelium-operator"

[[bin]]
name = "mycelium-operator"
path = "src/main.rs"

[[bin]]
name = "mycelium-crdgen"
path = "src/crdgen.rs"

[[bin]]
name = "mycelium-runner"
path = "src/runner.rs"

[lib]
name = "mycelium"
path = "src/lib.rs"

[features]
default = []
telemetry = []

[dependencies]
actix-rt = "2.5.0"
actix-web = "4.0.0-beta.15"
futures = "0.3.15"
tokio = { version = "1.6.0", features = ["macros"] }
kube = { version = "0.65.0", features = ["derive"] }
kube-runtime = "0.65.0"
k8s-openapi = { version = "0.13.1", features = ["v1_22", "schemars"], default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"
schemars = { version = "0.8.8", features = ["chrono"] }
serde_yaml = "0.8.17"
maplit = "1.0.2"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["json"] }
tracing-opentelemetry = "0.12.0"
opentelemetry = { version = "0.13.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.6.0", features = ["tokio"] }
prometheus = "0.12.0"
anyhow = "1.0.42"
reqwest = { version = "0.11.8", features = ["json"] }
toml_edit = "0.12.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
signal-hook = "0.3.13"
nix = "0.23.1"
