[package]
name = "mycelium"
version = "0.4.0"
authors = ["Nikhil Jha <source@nikhiljha.com>"]
edition = "2024"
default-run = "mycelium-operator"

[[bin]]
name = "mycelium-operator"
path = "src/main.rs"

[[bin]]
name = "mycelium-crdgen"
path = "src/crdgen.rs"

[[bin]]
name = "mycelium-runner"
path = "src/runner.rs"

[lib]
name = "mycelium"
path = "src/lib.rs"

[features]
default = []
telemetry = []

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.12.1"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["macros"] }
kube = { version = "2.0.1", features = ["derive", "rustls-tls"], default-features = false }
kube-runtime = "2.0.1"
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
schemars = { version = "1.2.0", features = ["chrono04"] }
serde_yaml = "0.9.34"
maplit = "1.0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tokio"] }
prometheus = "0.14.0"
anyhow = "1.0.100"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
toml_edit = "0.24.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
signal-hook = "0.4.1"
nix = { version = "0.30.1", features = ["process", "signal"] }
sha2 = "0.10.9"
base64 = "0.22.1"
