[package]
name = "mycelium-runner"
version = "0.1.0"
authors = ["Nikhil Jha <mail@nikhiljha.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
toml_edit = "0.2.1"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
